more delay and elgot

--- a/mpc19/paper.bib
+++ b/mpc19/paper.bib
@@ -89,3 +89,51 @@
   year      = {2017},
   doi       = {10.1016/j.jlamp.2016.08.003}
 }
+
+@article{BartheCP03,
+  author    = {Gilles Barthe and
+               Venanzio Capretta and
+               Olivier Pons},
+  title     = {Setoids in type theory},
+  journal   = {J. Funct. Program.},
+  volume    = {13},
+  number    = {2},
+  pages     = {261--293},
+  year      = {2003},
+  doi       = {10.1017/S0956796802004501}
+}
+
+@book{Hofmann,
+  author    = {Martin Hofmann},
+  title     = {Extensional constructs in intensional type theory},
+  series    = {{CPHC/BCS} distinguished dissertations},
+  publisher = {Springer},
+  year      = {1997},
+  isbn      = {978-3-540-76121-1}
+}
+
+@book{Hott,
+  author =    {The {Univalent Foundations Program}},
+  title =     {Homotopy Type Theory: Univalent Foundations of Mathematics},
+  publisher = {\url{https://homotopytypetheory.org/book}},
+  address =   {Institute for Advanced Study},
+  year =      2013}
+
+@article{CockettL07,
+  author    = {J. Robin B. Cockett and
+               Stephen Lack},
+  title     = {Restriction categories {III:} colimits, partial limits and extensivity},
+  journal   = {Mathematical Structures in Computer Science},
+  volume    = {17},
+  number    = {4},
+  pages     = {775--817},
+  year      = {2007},
+  doi       = {10.1017/S0960129507006056}
+  }
+
+@phdthesis{Giles,
+author = {Giles, Brett},
+year = {2014},
+school = {University of Calgary},
+title = {An investigation of some theoretical aspects of reversible computing}
+}
