Fixed 4.1, 4.2 and added citations.

--- a/mpc19/paper.bib
+++ b/mpc19/paper.bib
@@ -137,3 +137,36 @@ year = {2014},
 school = {University of Calgary},
 title = {An investigation of some theoretical aspects of reversible computing}
 }
+
+@article{CockettL02,
+author = {Cockett, J.~R.~B. and Lack, Stephen},
+journal = {Theoretical Computer Science},
+number = {1--2},
+pages = {223--259},
+title = {Restriction categories {I}: {C}ategories of partial maps},
+volume = {270},
+year = {2002}
+}
+
+@article{CockettL03,
+author = {Cockett, J.~R.~B. and Lack, Stephen},
+title = {Restriction categories {II}: {P}artial map classification},
+journal = {Theoretical Computer Science},
+number = {1--2},
+pages = {61--102},
+volume = {294},
+year = {2003}
+}
+
+@incollection{Kastl79,
+  title={Inverse categories},
+  author={Kastl, J.},
+  booktitle={Algebraische Modelle, Kategorien und Gruppoide},
+  editor={Hoehnke, Hans-J{\"u}rgen},
+  series={Studien zur Algebra und ihre Anwendungen},
+  volume={7},
+  year={1979},
+  pages={51-60},
+  publisher={Akademie-Verlag},
+  location={Berlin}
+}
