--- a/mpc19/paper.tex
+++ b/mpc19/paper.tex
@@ -53,6 +53,8 @@
 \newcommand{\Delay}{\mathsf{Delay}\,}
 \newcommand{\now}{\mathsf{now}}
 \newcommand{\later}{\mathsf{later}}
+\newcommand{\laterR}{\mathsf{laterR}}
+\newcommand{\laterL}{\mathsf{laterL}}
 \newcommand{\never}{\mathsf{never}}
 \newcommand{\dn}{\downarrow}
 \newcommand{\bind}{\mathsf{bind}}
@@ -69,6 +71,8 @@
 \newcommand{\piso}{\mathsf{isPartialIso}}
 \newcommand{\pisoalt}{\mathsf{isPartialIso}_2}
 \newcommand{\iterD}{\mathsf{iter}_\D}
+\newcommand{\unfolding}{\mathsf{unfolding}}
+\newcommand{\refl}{\mathsf{refl}}
 
 \newcommand{\todo}[1]{\hl{TODO: #1}}
 \newcommand{\todocite}[1]{\hl{[TODO: #1]}}
@@ -154,7 +158,9 @@ Both:
 
 Our work is settled in Martin-L\"of type theory with inductive and
 coinductive types. We write $(a : A) \to B \,a$ for dependent function
-spaces and $(a : A) \times B \,a$ for dependent products. We use the
+spaces and $(a : A) \times B \,a$ for dependent products. We allow
+dependent functions to have implicit arguments and indicate implicit
+argument positions with curly brackets (as in Agda). We use the
 symbol $=$ for definitional equality of terms and $\equiv$ for
 propositional equality. Given $f : A \to C$ and
 $g : B \to C$, we write $\copair f g : A + B \to C$ for their
@@ -188,23 +194,28 @@ we refrain from technical discussions on their implementation.
 
 \subsection{Types}
 
-\begin{figure}
 \[
-\arraycolsep=8pt\def\arraystretch{2.8}
-\begin{array}{|ccc|}
-\hline 
-\infer{\Z : \Ty_n}{} 
-& \infer{\I : \Ty_n}{}
-& \infer{\Var\,i : \Ty_n}{i \in [0..n)}  \\
-\infer{A \oplus B : \Ty_n}{A : \Ty_n & B : \Ty_n}
-& \infer{A \otimes B : \Ty_n}{A : \Ty_n & B : \Ty_n}
-& \infer{\mu\,A : \Ty_n}{A : \Ty_{n+1}} \\
-\hline
-\end{array}
+A ::= \Z \, | \,A \oplus A \, | \,\I \,| \,A \otimes A \,| \,X \,|
+\,\mu X.\,A 
 \]
-\caption{Types of \Pio.}
-\label{fig:types}
-\end{figure}
+
+%% \begin{figure}
+%% \[
+%% \arraycolsep=8pt\def\arraystretch{2.8}
+%% \begin{array}{|ccc|}
+%% \hline 
+%% \infer{\Z : \Ty_n}{} 
+%% & \infer{\I : \Ty_n}{}
+%% & \infer{\Var\,i : \Ty_n}{i \in [0..n)}  \\
+%% \infer{A \oplus B : \Ty_n}{A : \Ty_n & B : \Ty_n}
+%% & \infer{A \otimes B : \Ty_n}{A : \Ty_n & B : \Ty_n}
+%% & \infer{\mu\,A : \Ty_n}{A : \Ty_{n+1}} \\
+%% \hline
+%% \end{array}
+%% \]
+%% \caption{Types of \Pio.}
+%% \label{fig:types}
+%% \end{figure}
 
 \subsection{Programs}
 
@@ -310,19 +321,30 @@ returning $a$, and vice versa.
 Equivalently, weak bisimilarity can be coinductively formulated as follows:
 \begin{equation}
 \label{eq:weak2}
-\infer{\now\,a \approx \now\,a}{}
-\quad
-\infer{\now\,a \approx \later\,x}{\now\,a \approx x}
-\quad
-\infer{\later\,x \approx \now\,a}{x \approx \now \,a}
-\quad
-\infer={\later\,x_1 \approx \later\,x_2}{x_1 \approx x_2}
+\arraycolsep=8pt\def\arraystretch{2.8}
+\begin{array}{cc}
+\infer{\now_{\approx}  : \now\,a \approx \now\,a}{}
+&
+\infer={\later_{\approx} \,p : \later\,x_1 \approx \later\,x_2}{p : x_1 \approx x_2}
+\\
+\infer{\laterL_{\approx} \, p: \later\,x \approx \now\,a}{p : x \approx \now \,a}
+&
+\infer{\laterR_{\approx} \, p: \now\,a \approx \later\,x}{p : \now\,a \approx x}
+\end{array}
 \end{equation}
 In the rest of the paper we will employ
 both encodings of weak bisimilarity, in each case explicitly stating
 if we are working with definition (\ref{eq:weak1}) or definition (\ref{eq:weak2}).
 Weak bisimilarity is an equivalence
 relation and it is a congruence w.r.t. the $\later$ operation.
+For example, here is a proof that weak bisimilarity is reflexive,
+employing definition (\ref{eq:weak2}).
+\begin{align*}
+& \refl_{\approx} : \{x : \Delay A\} \to x \approx x \\
+& \refl_{\approx} \,\{\now\,a\} = \now_\approx \\
+& \refl_{\approx} \,\{\later\,x\} = \later_\approx\,(\refl_\approx \,\{x\})
+\end{align*}
+
 We call $\Dapprox$ the category $\D$ with homsets
 quotiented by pointwise weak bisimilarity. This means that in
 $\Dapprox$ two morphisms $f$ and $g$ are considered equal whenever
@@ -467,15 +489,28 @@ The delay monad is an Elgot monad for which the axioms holds up to
 weak bisimilarity, not propositional equality. Its iteration operator
 relies on the definition of an auxiliary function $\iterD'$
 corecursively defined as follows:
-\begin{align*}
-& \iterD' : (A \to \Delay (A + B)) \to \Delay (A + B) \to \Delay B \\
-& \iterD' \,f \,(\now \,(\inl\, a)) = \later \,(\iterD' \,f \,(f \,a)) \\
-& \iterD' \,f \,(\now \,(\inr\, b)) = \now \,b \\
-& \iterD' \,f \,(\later \,x) = \later \,(\iterD' \,f \,x) \\ 
-& \\
-& \iterD : (A \to \Delay (A + B)) \to A \to \Delay B \\
-& \iterD \,f \,a = \iterD' \,f \,(f \,a)
-\end{align*}
+\[ %\arraycolsep=8pt
+\def\arraystretch{1.2}
+\begin{array}{ll}
+\multicolumn{2}{l}{\iterD' : (A \to \Delay (A + B)) \to \Delay (A + B) \to \Delay B} \\
+\iterD' \,f \,(\now \,(\inl\, a)) &= \later \,(\iterD' \,f \,(f \,a)) \\
+\iterD' \,f \,(\now \,(\inr\, b)) &= \now \,b \\
+\iterD' \,f \,(\later \,x) &= \later \,(\iterD' \,f \,x) \\
+ \\
+\multicolumn{2}{l}{\iterD : (A \to \Delay (A + B)) \to A \to \Delay B} \\
+\multicolumn{2}{l}{\iterD \,f \,a = \iterD' \,f \,(f \,a)}
+\end{array}
+\]
+
+%% \begin{align*}
+%% & \iterD' : (A \to \Delay (A + B)) \to \Delay (A + B) \to \Delay B \\
+%% & \iterD' \,f \,(\now \,(\inl\, a)) = \later \,(\iterD' \,f \,(f \,a)) \\
+%% & \iterD' \,f \,(\now \,(\inr\, b)) = \now \,b \\
+%% & \iterD' \,f \,(\later \,x) = \later \,(\iterD' \,f \,x) \\ 
+%% & \\
+%% & \iterD : (A \to \Delay (A + B)) \to A \to \Delay B \\
+%% & \iterD \,f \,a = \iterD' \,f \,(f \,a)
+%% \end{align*}
 The definition above can be given the following intuitive
 explaination. If $f\,a$ does not terminate, then $\iterD\,f\,a$ does
 not terminate as well. If $f\,a$ terminates, there are two
@@ -492,6 +527,26 @@ and taking $f = \inlD$, we would have that $\iterD' \,f \,(\now
 Agda, such a definition would be rightfully rejected by the termination
 checker. 
 
+As mentioned above, $\iterD$ satisfies the Elgot iteration axioms only
+up to weak bisimilarity. Here we show the proof of the unfolding
+axiom. We employ the definition (\ref{eq:weak2}) of weak
+bisimilarity. The proof relies on an auxiliary proof $\unfolding'$. 
+\[
+\def\arraystretch{1.2}
+\begin{array}{ll}
+\multicolumn{2}{l}{\unfolding' : (f : A \to \Delay (A + B)) \to
+  \bind\, \copairD{\iterD \,f}{\now} \approx \iterD' \,f} \\
+\unfolding' \,f \,(\now \,(\inl \,a)) & = \laterR_{\approx} \,
+  \refl_\approx \\
+\unfolding' \,f \,(\now \,(\inr \,b)) & = \now_\approx \\
+\unfolding' \,f \,(\later \,x) & = \later_\approx \,(\unfolding'\, f\,
+  x) \\
+ \\
+\multicolumn{2}{l}{\unfolding : (f : A \to \Delay (A + B)) \to \copairD{\iterD
+  \,f}{\now} \diamond f \approx \iterD \,f}\\
+\multicolumn{2}{l}{\unfolding \,f\,x = \unfolding'\,f\,(f\,x)}
+\end{array}
+\]
 
 
 \section{Interpretation}\label{sec:interpretation}
