Added TikZiT support, basic diagrams.

--- a/mpc19/paper.tex
+++ b/mpc19/paper.tex
@@ -19,6 +19,9 @@
 \usepackage{mathtools}
 \usepackage{fancyvrb}
 
+\usepackage{tikzit}
+\input{figures/stringdiagrams.tikzstyles}
+
 \usepackage{soul}
 
 
@@ -495,7 +498,7 @@ and taking $f = \inlD$, we would have that $\iterD' \,f \,(\now
 Agda, such a definition would be rightfully rejected by the termination
 checker. 
 
-
+%\ctikzfig{language}
 
 \section{Interpretation}\label{sec:interpretation}
 
