Added diagrams for the construction of the trace from the Elgot iterator.

--- a/mpc19/paper.tex
+++ b/mpc19/paper.tex
@@ -498,7 +498,9 @@ and taking $f = \inlD$, we would have that $\iterD' \,f \,(\now
 Agda, such a definition would be rightfully rejected by the termination
 checker. 
 
-%\ctikzfig{language}
+\ctikzfig{fL_fR}
+\ctikzfig{trace}
+
 
 \section{Interpretation}\label{sec:interpretation}
 
