--- a/mpc19/paper.bib
+++ b/mpc19/paper.bib
@@ -170,3 +170,15 @@ year = {2003}
   publisher={Akademie-Verlag},
   location={Berlin}
 }
+
+@inproceedings{Hasegawa97,
+  author    = {Masahito Hasegawa},
+  title     = {Recursion from Cyclic Sharing: Traced Monoidal Categories and Models
+               of Cyclic Lambda Calculi},
+  booktitle = {Typed Lambda Calculi and Applications, Third International Conference
+               on Typed Lambda Calculi and Applications, {TLCA} '97, Nancy, France,
+               April 2-4, 1997, Proceedings},
+  pages     = {196--213},
+  year      = {1997},
+  doi       = {10.1007/3-540-62688-3\_37}
+  }
